--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -47,5 +47,5 @@
 (pageChange)="p = $event" 
 class="float-right">
 </pagination-controls>
-  <button routerLink="/form" class="submit_btn">Back</button>
+  <button routerLink="./form" class="submit_btn">Back</button>
   </body>
