--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -1,8 +1,8 @@
- <body style="background-color:rgb(161, 209, 253)">
+ <body class="style">
  <button class="submit_btn"  (click)="Hideshowform() ">Show Participants</button> 
  <br>
   <br>
-  <h1 style="text-align:center;color:#143479">
+  <h1 style="text-align:center;color:#ffffff">
     Participants Details
   </h1>
 
