--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -11,8 +11,8 @@
 body{
   background: linear-gradient(
      105deg,
-     #88beee ,
-     #0a2e73
+     #777879 ,
+     #0f0f0f
  );
 }
 .text-danger{
@@ -37,7 +37,7 @@ body{
 	text-align: center;
 	font-size: 25px;
 
-	color: rgb(13, 98, 215);
+	color: rgb(29, 29, 30);
 
 	letter-spacing: 1px;
 	font-weight: 700;
@@ -82,9 +82,11 @@ body{
 }
 
 .form_wrap  input[type="text"]:focus{
-	border-color: #063abd;
+	border-color: #000000;
 }
-
+.form_wrap input[type="radio"] :focus{
+	color: #6f6f6f;
+  }
 .form_wrap ul{
 border:2px solid #9597a6;
   width:103%;
@@ -115,17 +117,18 @@ select{
 	font-size: 17px;
 	padding: 3px 15px;
 	border-radius: 15px;
-	color: #101749;
+	color: #171717;
 }
 
 .form_wrap .input_radio:checked ~ span{
 
   color:white;
+  color: #6f6f6f;
 }
 
 .form_wrap .submit_btn{
 	width: 100%;
-	background: #0d6ad7;
+	background: #181818;
 	padding: 10px;
 	border: 0;
   color:white;
@@ -137,7 +140,11 @@ select{
 }
 
 .form_wrap .submit_btn:hover{
-	background: #051c94;
+	background: #ffffff;
+	color:#000000;
+	border:2px solid black
+
+
 }
 
 
