--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -42,6 +42,8 @@
 <pagination-controls style="color:#143479" 
 (pageChange)="p = $event" 
 class="float-right">
-</pagination-controls>
+</pagination-controls><br>
+<br>
+<br>
   <button  (click)="submit()" class="submit_btn">Back</button>
   </body>
