--- a/src/app/show/show.component.css
+++ b/src/app/show/show.component.css
@@ -1,6 +1,5 @@
-table{margin-left: 10%;width:80%; height: 85%;
-}
-.style{ background: linear-gradient(105deg, #afafaf , #424242); }
+
+.style{ background-color: rgb(161, 161, 161); }
 .head{font-size: xx-large; height: 100px; }
 
 a{ text-decoration:none}
@@ -37,22 +36,20 @@ td{ text-align: left; color: #000000;
 }
 .btstyle{ background-color: white; color: #080808;padding: 20px;border: 1px solid #101010;cursor: pointer;font-weight: 800;
 }
-.main .users{ display: flex; width: 100%;
+.main .users{ display: flex; margin-left: 10%;
   }
  .submit_btn{width: 100%;background: #242424;padding: 20px;border: 0; color:white; font-size:20px;border-radius: 3px;text-transform: uppercase;letter-spacing: 2px;cursor: pointer;
 }
  .submit_btn:hover{	background: #ffffff; color:black; border:2px solid black;
 }
-.users .card{ width: 100%; margin: 20px; background: white; text-align: center; border-radius: 10px; display: flex; flex-wrap: nowrap;
+.users .card{ width: 100%;height: 100%; margin: 10px; background: white; text-align: center; border-radius: 10px; display: flex; flex-wrap: nowrap;
 }
-.users .card h4{text-transform: uppercase;
-}
-.users .card p{ font-size: 12px; margin-bottom: 15px; text-transform: uppercase;
-}
+
+
 .users table{
   margin:  auto;
+  width: 500px;
+  height: 200px;
+  padding: 2%;
 }
-.users .per span{ padding: 5px; border-radius: 10px; background: rgb(223, 223, 223);
-}
-.users td{ font-size: 14px; padding-right: 15px;
-}
+
