--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -6,10 +6,10 @@
     Participants Details
   </h1>
   <section class="main"  >
-  <div *ngFor="let text of Obj | paginate:  { itemsPerPage: 8, currentPage: p }" >      
+  <div *ngFor="let text of Obj | paginate:  { itemsPerPage: 15, currentPage: p }" >      
 <div class="users">
   <div class="card">
-<table style="height:50px; padding: 2%" >
+<table >
         <tr>
         <td class="tdstyle"> FirstName: </td> 
         <td>{{text.fname}}</td>
