--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -48,7 +48,7 @@
   					</ul>
   				</div>
   				<div class="input_wrap">
-  					<input type="submit" (click)="submit()" value="Submit" class="submit_btn"> 
+  					<input type="submit" routerLink="/show" (click)="submit()" value="Submit" class="submit_btn"> 
   				</div>
   			</div>
   		</form>
