--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -45,5 +45,5 @@ class="float-right">
 </pagination-controls><br>
 <br>
 <br>
-  <button  (click)="submit()" class="submit_btn">Back</button>
+  <button routerLink="/form"  (click)="submit()" class="submit_btn">Back</button>
   </body>
