--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -23,8 +23,8 @@
      <td> {{text.email}}</td>
   </tr>
 <tr>       
-    <td class="tdstyle"> Project topic: </td> 
-     <td> {{text.projecttopic}}</td>
+    <td class="tdstyle"> Groups: </td> 
+     <td> {{text.groups}}</td>
   </tr>
  <tr>
     <td class="tdstyle"> Interested technology: </td>
