--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -1,8 +1,9 @@
  <body class="style">
- <button class="submit_btn"  (click)="Hideshowform() ">Show Participants</button> 
+ <h1 style="text-align: center; font-size: 60px;"  (click)="Hideshowform() ">Show Participants</h1> 
+
  <br>
   <br>
-  <h1 style="text-align:center;color:#ffffff">
+  <h1 style="text-align:center;color:#3b3b3b;font-size: 40px;">
     Participants Details
   </h1>
   <section class="main"  >
