--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,7 +1,9 @@
 <body>
 	<h1 style="color:aliceblue;text-align: center;font-size: 50px;">Hackathon Application Register By FEB 18-20</h1><br>
 	<hr>
+	<br>
 	<p (click)="Hideshowform()"></p>
+	<button  style="float:right; height: 30%;" routerLink="/show">View Details</button>
 <p id="result"></p>
 	<div class="wrapper">
 		<div class="registration_form1">
