--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -3,7 +3,7 @@
 	<hr>
 	<br>
 	<p (click)="Hideshowform()"></p>
-	<button  style="float:right; height: 30%;" routerLink="/show">View Details</button>
+	<button class="btn" routerLink="/show">View Details</button>
 <p id="result"></p>
 	<div class="wrapper">
 		<div class="registration_form1">
