--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -30,17 +30,22 @@ body{
 	border-radius: 5px;
 	height: 30%;
 	width: 450px;
-	margin-left: -30%;
-	margin-top: -3%;
+	margin-left: -25%;
+	margin-top: -20%;
 }
+mat-toolbar-row{
+    background-color: white;
+    height:100px;
+   border:1px solid #3b3b3b;
+   
 
+}
 .registration_form{
 	background: white;
 	padding: 25px;
 	border-radius: 5px;
 	width: 400px;
-	margin-left: 40%;
-	margin-top: -100%;
+	margin-top: -5%;
 }
 .registration_form .title{
 	text-align: center;
@@ -54,6 +59,7 @@ body{
 .btn{
 	float: right;
 	padding: 0.5%;
+	margin-left: -100%;
 	
 
 }
