--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,10 +1,21 @@
 <body>
-	<h1 style="color:aliceblue;text-align: center;font-size: 50px;">Hackathon Application Register By FEB 18-20</h1><br>
-	<hr>
+	<mat-toolbar >
+		<mat-toolbar-row>
+			<img style="width:70px;height: 50px;" src="/assets/images-removebg-preview (1).png">
+			<h1 style="color:black;font-size: 50px;margin-left: 15%; " >Hackathon Application Register By FEB 18-20</h1><br>
+			<button style="padding: 0.5%;float: right; margin-left: 4%;" routerLink="/show" >View Details</button>
+		</mat-toolbar-row>
+	  </mat-toolbar>
+
+
+	
 	<br>
 	<p (click)="Hideshowform()"></p>
-	<button class="btn" routerLink="/show">View Details</button>
+	
 <p id="result"></p>
+
+<div class="wrapper" >
+
 	<div class="wrapper">
 		<div class="registration_form1">
 			<div class="form_wrap">
@@ -20,8 +31,6 @@
 							</div>
 					</div>
 					<h2 style="text-align:center;">Group2</h2>
-					
-					
 					<div class="input_grp">
 						<div class="input_wrap">							<label for="fname">Registered</label>
 							<input type="text" id="fname" style="font-size: large;" [(ngModel)]="this.List1.length" autocomplete="off" name="fname" readonly>  
@@ -56,8 +65,6 @@
 							</div>	
 					</div>
 					<h2 style="text-align:center;">Group5</h2>
-					
-					
 					<div class="input_grp">
 						<div class="input_wrap">
 							<label for="fname">Registered</label>
@@ -66,16 +73,10 @@
 						<div class="input_wrap">
 							<label for="lname">Available</label>
 							<input type="text" id="lname" style="font-size: large;" [(ngModel)]="10-this.List4.length" autocomplete="off" name="lname"  />							</div>
-					
-					</div>
-					
-					
+					</div>	
 		</div>
-	
 		</div>
-		
 		</div>
-		<div class="wrapper" >
   	<div class="registration_form">
   		<div class="title">
   			Hackathon Registration
@@ -86,23 +87,19 @@
   					<div class="input_wrap">
   						<label for="fname">First Name</label>
   						<input type="text" id="fname" formControlName="fname" autocomplete="off" name="fname" >
-							  <span style="color: red;" *ngIf="fname && fname.invalid && fname.touched">Please enter your firstname</span>
-						
+							  <span style="color: red;" *ngIf="fname && fname.invalid && fname.touched">Please enter your firstname</span>	
   					</div>
   					<div class="input_wrap">
   						<label for="lname">Last Name</label>
   						<input type="text" id="lname" formControlName="lname" autocomplete="off" name="lname"  />
-						 
 							  <span style="color: red;" *ngIf="lname && lname.invalid && lname.touched">Please enter your lastname</span>
 						  </div>
-  				
   				</div>
   				<div class="input_wrap">
   					<label for="email">Email Address</label>
   					<input type="text" id="email" formControlName="email" autocomplete="off" name="email">
 					 
-						  <span style="color: red;" *ngIf="email && email.invalid && email.touched">Please enter your valid email</span>
-					
+						  <span style="color: red;" *ngIf="email && email.invalid && email.touched">Please enter your valid email</span>	
   				</div>
   				<div class="input_wrap">
   					<label for="city">Groups</label>
@@ -118,10 +115,7 @@
   				<div class="input_wrap">
   					<label for="country">Interested Technology</label>
             <input type="text" id="interested technology" formControlName="interestedtechnology" name="interestedtechnology" autocomplete="off" >
-
-						  <span style="color: red;" *ngIf="interestedtechnology && interestedtechnology.invalid && interestedtechnology.touched">Please enter your Interested Technology</span>
-						
-					
+						  <span style="color: red;" *ngIf="interestedtechnology && interestedtechnology.invalid && interestedtechnology.touched">Please enter your Interested Technology</span>	
   				</div>
           <div class="input_wrap">
   					<label>Gender</label>
@@ -132,7 +126,6 @@
   								<span>Male</span>
   							</label>
   						</li>
-					
   						<li>
   							<label class="radio_wrap">
   								<input type="radio" name="gender" value="female" formControlName="gender" autocomplete="off" class="input_radio">
@@ -148,6 +141,5 @@
   		</form>
 	</div>
   </div>
- 
   </body>
 
