--- a/src/app/show/show.component.css
+++ b/src/app/show/show.component.css
@@ -50,4 +50,10 @@ td{ text-align: left; color: #000000;
   height: 200px;
   padding: 2%;
 }
+mat-toolbar-row{
+  background-color: white;
+  height:100px;
+ border:1px solid #3b3b3b;
+ 
 
+}
