--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -1,7 +1,7 @@
  <body class="style">
   <mat-toolbar >
 		<mat-toolbar-row>
-      &nbsp;<img style="width:70px;height: 50px;" src="/assets/images-removebg-preview (1).png">
+      &nbsp;<img style="width:70px;height: 50px;" src="./assets/images-removebg-preview (1).png">
       <h1 style="text-align: center; font-size: 60px;margin-left: 30%;"  (click)="Hideshowform() "> Participants Details</h1> 
 		</mat-toolbar-row>
 	  </mat-toolbar>
