--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,7 +1,7 @@
 <body>
 	<mat-toolbar >
 		<mat-toolbar-row>
-			<img style="width:70px;height: 50px;" src="/assets/images-removebg-preview (1).png">
+			<img style="width:70px;height: 50px;" src="./assets/images-removebg-preview (1).png">
 			<h1 style="color:black;font-size: 50px;margin-left: 15%; " >Hackathon Application Register By FEB 18-20</h1><br>
 			<button style="padding: 0.5%;float: right; margin-left: 4%;" routerLink="/show" >View Details</button>
 		</mat-toolbar-row>
