--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -16,9 +16,12 @@
 <div class="wrapper" >
 
 	<div class="wrapper">
+		<h1>Groups</h1>
+		
 		<div class="registration_form1">
 			<div class="form_wrap">
-					<h2 style="text-align:center;">Group1</h2>
+					<h2  >Group1</h2>
+					
 					<div class="input_grp">
 						<div class="input_wrap">
 							<label  for="fname" >Registered:</label>
@@ -26,20 +29,20 @@
 						</div>
 						<div class="input_wrap">
 							<label for="lname">Available</label>
-							<input type="text" id="lname" style="font-size: large;" [(ngModel)]="10-this.List.length" autocomplete="off" name="lname" readonly  />   
+							<input type="text" id="lname" style="font-size: large;" [(ngModel)]="20-this.List.length" autocomplete="off" name="lname" readonly  />   
 							</div>
 					</div>
-					<h2 style="text-align:center;">Group2</h2>
+					<h2 >Group2</h2>
 					<div class="input_grp">
 						<div class="input_wrap">							<label for="fname">Registered</label>
 							<input type="text" id="fname" style="font-size: large;" [(ngModel)]="this.List1.length" autocomplete="off" name="fname" readonly>  
 						</div>
 						<div class="input_wrap">
 							<label for="lname">Available</label>
-							<input type="text" id="lname" style="font-size:large;" [(ngModel)]="10-this.List1.length" autocomplete="off" name="lname"  readonly/>
+							<input type="text" id="lname" style="font-size:large;" [(ngModel)]="20-this.List1.length" autocomplete="off" name="lname"  readonly/>
 							</div>
 					</div>
-					<h2 style="text-align:center;">Group3</h2>
+					<h2 >Group3</h2>
 					<div class="input_grp">
 						<div class="input_wrap">
 							<label for="fname">Registered</label>
@@ -47,10 +50,10 @@
 						</div>
 						<div class="input_wrap">
 							<label for="lname">Available</label>
-							<input type="text" id="lname" style="font-size: large;" [(ngModel)]="10-this.List2.length" autocomplete="off" name="lname" readonly />
+							<input type="text" id="lname" style="font-size: large;" [(ngModel)]="20-this.List2.length" autocomplete="off" name="lname" readonly />
 							</div>
 					</div>
-					<h2 style="text-align:center;">Group4</h2>
+					<h2 >Group4</h2>
 					<div class="input_grp">
 						<div class="input_wrap">
 							
@@ -59,11 +62,11 @@
 						</div>
 						<div class="input_wrap">
 							<label for="lname">Available</label>
-							<input type="text" id="lname" style="font-size: large;" [(ngModel)]="10-this.List3.length" autocomplete="off" name="lname"  />
+							<input type="text" id="lname" style="font-size: large;" [(ngModel)]="20-this.List3.length" autocomplete="off" name="lname"  />
 						  
 							</div>	
 					</div>
-					<h2 style="text-align:center;">Group5</h2>
+					<h2 >Group5</h2>
 					<div class="input_grp">
 						<div class="input_wrap">
 							<label for="fname">Registered</label>
@@ -71,7 +74,7 @@
 						</div>
 						<div class="input_wrap">
 							<label for="lname">Available</label>
-							<input type="text" id="lname" style="font-size: large;" [(ngModel)]="10-this.List4.length" autocomplete="off" name="lname"  />							</div>
+							<input type="text" id="lname" style="font-size: large;" [(ngModel)]="20-this.List4.length" autocomplete="off" name="lname"  />							</div>
 					</div>	
 		</div>
 		</div>
