--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -47,5 +47,5 @@ class="float-right">
 </pagination-controls><br>
 <br>
 <br>
-  <button routerLink="/form"  (click)="submit()" class="submit_btn">Back</button>
+  <button routerLink="./form"  (click)="submit()" class="submit_btn">Back</button>
   </body>
