--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -5,17 +5,23 @@
 			<h1 style="color:black;font-size: 40px;margin-left: 15%; " >Hackathon Application Register By FEB 18-20</h1><br>
 			<button style="padding: 0.5%;float: right; margin-left: 4%;" routerLink="/show" >View Details</button>
 		</mat-toolbar-row>
-	  </mat-toolbar>
-
-
-	
+	</mat-toolbar>
 	<br>
 	<p (click)="Hideshowform()"></p>
-	
 <p id="result"></p>
 <div class="wrapper" >
 
+	<div class="row"> Register By
+	<div class="col">
+	<div>StartDate:-16/02/2023</div>
+	<div>StartDate:-18/02/2023</div>
+		</div>
+	</div>
+
+	
 	<div class="wrapper">
+		
+
 		<h1>Groups</h1>
 		
 		<div class="registration_form1">
