--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -11,10 +11,11 @@
 <p id="result"></p>
 <div class="wrapper" >
 
-	<div class="row"> Register By
+	<div class="row"> REGISTER BY
+		<hr style="font-weight: bold;">
 	<div class="col">
-	<div>StartDate:-16/02/2023</div>
-	<div>StartDate:-18/02/2023</div>
+	<div>Start Date:-16/02/2023</div>
+	<div>End Date:-18/02/2023</div>
 		</div>
 	</div>
 
