--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -40,12 +40,16 @@
 </div>
   </div>
   </div>
+  
 </section>
+
 <pagination-controls style="color:#143479" 
 (pageChange)="p = $event" 
 class="float-right">
-</pagination-controls><br>
+</pagination-controls>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br>
 <br>
-  <button routerLink="./form"  (click)="submit()" class="submit_btn">Back</button>
+<button routerLink="./form"  (click)="submit()" class="submit_btn">Back</button>
+
   </body>
